--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   }
 }
